# CloudHaskell-Repo

./: README.md  docker-compose.yml  stack.yaml  start.sh  use-cloudhaskell.cabal
app/: Main.hs
src/: CountLines.hs  Lib.hs  RepoWork.hs
